[gd_scene load_steps=3 format=3 uid="uid://cyxho6ktxqr3w"]

[ext_resource type="Script" path="res://hboxes/hurtbox.gd" id="1_pvj87"]

[sub_resource type="CircleShape2D" id="CircleShape2D_il37f"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_pvj87")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_il37f")

[node name="Timer" type="Timer" parent="."]

[connection signal="invuln_ended" from="." to="." method="_on_invuln_ended"]
[connection signal="invuln_start" from="." to="." method="_on_invuln_start"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
